mem error handling. scripts. flush.