@@ -1,6 +1,6 @@
 @echo off
-set JAR=ena-browser-flatfile-to-xml-1.0.0.jar
-set JAVA=java --add-opens java.base/java.lang=ALL-UNNAMED
+set JAR=.\ena-browser-flatfile-to-xml.jar
+set JAVA=java -Xms128m -Xmx4096m
 IF "%~1"=="" GOTO noargs
 IF "%~2"=="" GOTO noargs
 IF "%~3"=="" GOTO defaultformat
@@ -8,7 +8,6 @@ IF "%~3"=="" GOTO defaultformat
 %JAVA% -jar %JAR% --flatfile="%1" --xmlfile="%2" --format="%3"
 if errorlevel 1 (
    echo Exited with error code %errorlevel%
-   exit /b %errorlevel%
 )
 GOTO :end
 
@@ -17,13 +16,12 @@ echo Usage: "<flatfile path> <xml output path> <flatfile format: EMBL/CDS/NCR/MA
 echo Last argument is optional. Default format is EMBL.
 echo e.g.
 echo ff-to-xml.cmd c:\user\ABC.txt c:\user\ABC.xml CDS
-exit 1
+GOTO :end
 
 :defaultformat
 %JAVA% -jar %JAR% --flatfile="%1" --xmlfile="%2"
 if errorlevel 1 (
    echo Exited with error code %errorlevel%
-   exit /b %errorlevel%
 )
 
 :end
